Project HoloApi {
    database_type: 'PostgreSQL'
}

Table companies {
  id int [pk, increment]
  name varchar [not null]
  name_jp varchar
  website_url varchar
}

Table agencies {
  id int [pk, increment]
  name varchar [not null]
  name_jp varchar
  website_url varchar
  company_id int [ref: - companies.id]
}

Table members {
  id int [pk, increment]
  name varchar [not null]
  name_jp varchar
  agency_id int [ref: > agencies.id]
  debut_date date
  birthday date
  age int
  height int
  gender varchar
  zodiac varchar
  emoji varchar
  nicknames "string[]"
  // perhaps adding later
  // illustrator, live2d illustrator
}

Table groups {
  id int [pk, increment]
  name varchar [not null]
  name_jp varchar
  agency_id int [ref: > agencies.id]
}

// Group n..m Member junction table
Table group_members {
  id int [pk, increment]
  group_id int [not null, ref: - groups.id]
  member_id int [not null, ref: - members.id]
}

Table livestreams {
  id int [pk, increment]
  title varchar [not null]
  stream_url varchar [not null]
  thumbnail_url string
  member_id int [not null, ref: > members.id]
  medial_channel_id int [not null, ref: > media_channels.id]
  status livestream_status [not null]
  startDate datetime [not null]
  endDate datetime
}

Table media_channels {
  id int [pk, increment]
  name varchar [not null]
  channel_id varchar [not null]
  channel_url varchar [not null]
  thumbnail_url varchar
  member_id int [not null, ref: > members.id]
  media_platform_id int [not null, ref: > media_platforms.id]
}

Table media_platforms {
  id int [pk, increment]
  name varchar [not null]
  website_url varchar [not null]
 }
 
Table social_channels {
  id int [pk, increment]
  name varchar [not null]
  channel_id varchar [not null]
  channel_url varchar [not null]
  thumbnail_url varchar
  member_id int [not null, ref: > members.id]
  social_platform_id int [ref: > social_platforms.id]
}

Table social_platforms {
  id int [pk, increment]
  name varchar [not null]
  website_url varchar [not null]
}